# rustmodules

./: Cargo.toml
src/: lib.rs
src/mymodule/: mod.rs  testor_one.rs  testor_two.rs
src/mymodule/mysubmodule/: bla.rs  mod.rs
src/mymodule/mysubmodule2/: bla.rs
