[package]
name = "testor"
version = "0.1.0"
authors = ["Dominik Susmel <dominik.susmel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "testor"
path = "src/bin/main.rs"

[features]
default = ["linux"]

macos = []
linux = []

[dependencies]
